# python

./: README.md  devshell.nix  flake.nix  main.py  pyproject.toml
my_package/: __init__.py
